--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>wallet</title>
+    <link rel="stylesheet" href="static/fonts/roboto.css">
+    <link rel="stylesheet" href="static/fonts/icons.css">
   </head>
   <body>
     <div id="app"></div>
