--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>wallet</title>
+    <title>Wallet | by Moinho Digital</title>
     <link rel="stylesheet" href="static/fonts/roboto.css">
     <link rel="stylesheet" href="static/fonts/icons.css">
+    <link rel="stylesheet" href="static/animate.css">
   </head>
   <body>
     <div id="app"></div>
