--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <title>Wallet | by Moinho Digital</title>
     <link rel="stylesheet" href="static/fonts/roboto.css">
-    <link rel="stylesheet" href="static/fonts/icons.css">
-    <link rel="stylesheet" href="static/animate.css">
+    <link rel="stylesheet" href="static/fonts/material-icons.css">
   </head>
   <body>
     <div id="app"></div>
